--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@line/bot-sdk": "^7.4.0",
+    "@line/liff": "^2.18.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "express": "^4.17.2",
+    "firebase": "^9.6.2",
+    "install": "^0.13.0",
+    "vue": "^3.2.26",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
